{
    "name": "SpoonMover",
    "maps": [
        {
            "name": "Move",
            "id": "b36c7905-b63a-4fc8-bd00-192e02fcf607",
            "actions": [
                {
                    "name": "deltaX",
                    "type": "Value",
                    "id": "1fec95f5-a074-4cd4-b804-3b3ffcbf817b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "deltaY",
                    "type": "Value",
                    "id": "c2a651b7-4bd0-4407-ba38-5e9217dd4c62",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21ba67b8-9911-4d9b-a720-f6992cf8389d",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "deltaX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea1ea0bc-9638-4969-ac1c-2efa81b0e4d9",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "deltaY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}